# jh

./: .env.example  .gitignore  CLAUDE.md  DEV_SHORTCUTS.md  README.md  dev.sh  dev_git.sh  dev_terraform.sh  pyproject.toml  tfvars.sh
.claude/: settings.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-chat.yml
backend/: .env.example  .gitignore  .sam-config  .samignore  README.md  README_DEPLOYMENT.md  alembic.ini  conftest.py  deploy.config.json  main.py  pytest.ini  requirements.txt  samconfig.toml  samconfig.toml.example  template.yaml
backend/alembic/: env.py
backend/api/: constants.py  ingestion_routes.py  jobs_routes.py  resume_routes.py  routes.py  story_routes.py  tracking_routes.py
backend/auth/: dependencies.py  models.py  routes.py  utils.py
backend/config/: settings.py
backend/db/: __init__.py  company_settings_service.py  jobs_service.py  run_service.py  session.py  user_service.py
backend/extractor_agent/: cli.py  discover.py  (+2 more)
chat/: .env.example  .sam-config  agentLoop.js  anthropicClient.js  auth.js  deploy.config.json  generateResponse.js  handler.js  local.js  mcpClient.js  package-lock.json  package.json  redis.js  sse.js  sseTransport.js  streamTurn.js  summarize.js  template.yaml
docs/: PHASE_SUMMARY_TEMPLATE.md  SESSION_GUIDE.md
eval/: .gitignore  README.md  adversarial.json  capture.js  cases.js  requirements.txt  run_eval.py  run_eval_ragas.py
frontend/: .env.example  .gitignore  README.md  deploy.config.json  package-lock.json  package.json  vercel-ignore-build-step.sh  vercel.json
src/: README.md  __init__.py
(+283 files in other folders)
