[project]
name = "jh"
version = "0.1.0"
description = "Job Hunter - Job extraction and tracking"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend"]
pythonpath = ["backend"]

[tool.mypy]
python_version = "3.13"
mypy_path = "backend"
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true
